# iced-prototype-mouse-area

./: Cargo.toml  flake.nix  projects.toml
src/: main.rs  mouse_area.rs
